
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;


 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int die (int,char*) ;
 int select (int,int *,int *,int *,struct timeval*) ;

int checkData(int s) {
int rd;
        fd_set rfds;
        struct timeval tv;

FD_ZERO(&rfds);
FD_SET(s, &rfds);

tv.tv_sec = 5;
tv.tv_usec = 0;


rd = select(s+1,&rfds,((void*)0),((void*)0),&tv);
if(rd < 0)
die(1,"select()");
return rd;
}
